# trimlab

./: .gitignore  ARCHITECTURE.md  INSTALL_WINDOWS.md  README.md  cible.py  code_dump.txt  generate_key.py  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.svelte  app.css  app.d.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  sync_audio.rs
src-tauri/src/commands/: export_audio.rs  export_ffmpeg.rs  export_multi_xml.rs  licence.rs  mod.rs  projects.rs  segments.rs  subtitle.rs  whisper.rs
src/components/: BatchQueue.svelte  ExportFFmpegModal.svelte  ExportModal.svelte  MergeTimelineModal.svelte  Notifications.svelte  ParamsPanel.svelte  TranscribeModal.svelte
src/components/licence/: LicenceModal.svelte
src/components/player/: VideoPlayer.svelte
src/components/subtitles/: SubtitleEditor.svelte  SubtitleStylePanel.svelte
src/components/timeline/: Timeline.svelte
src/components/waveform/: Waveform.svelte
src/lib/: commands.ts  history.ts  shortcuts.ts  store.ts  utils.ts
src/routes/: App.svelte  Dashboard.svelte  Landing.svelte
