[package]
name = "trimlab"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri                     = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog       = "2"
tauri-plugin-fs           = "2"
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# Whisper (100% local)
whisper-rs = "0.11"

# Audio decode
hound = "3"

# NOUVEAU : Pour le téléchargement automatique des modèles
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
dirs = "5"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
hmac = "0.12.1"
sha2 = "0.10.9"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
